@@ -5,6 +5,7 @@ Changes for 1.3.3
 -Added an ability to globally override NPC settings by placing of npc-*.txt file into graphics/npc directlry of assets
 -Added an ability to run executable with a different assets directory specified
 -Added the support for playable character custom INI calibrations
+-Message box line breaking algorithm has been improved, added support for new-line characters
 
 Changes for 1.3.2.4
 -Allow music change for outro level (if outro level has non-silent music, it will be played instead of built-in)
